infra/k8s/auth-depl.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: auth-depl 
spec:
  replicas: 1 
  selector: 
    matchLabels:
      app: auth 
  template:
    metadata:
      labels: 
        app: auth
    spec:
      containers:
        - name: auth 
          image: badal1/auth 
---
apiVersion: v1 
kind: Service 
metadata: 
  name: auth-srv 
spec: 
  type: ClusterIP
  selector:
      app: auth
  ports:
    - name: auth 
      protocol: TCP 
      port: 3000
      targetPort: 3000
