infra/k8s/mail-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mail
  template:
    metadata:
      labels:
        app: mail
    spec:
      containers:
        - name: mail
          image: badal1/mail
---
apiVersion: v1
kind: Service
metadata:
  name: mail-srv
spec:
  type: ClusterIP
  selector:
    app: mail
  ports:
    - name: mail
      protocol: TCP
      port: 3000
      targetPort: 3000
