infra/k8s/mail-mysql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-mysql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mail-mysql
  template:
    metadata:
      labels:
        app: mail-mysql
    spec:
      containers:
        - name: mail-mysql
          image: mysql:8.0-bookworm
---
apiVersion: v1
kind: Service
metadata:
  name: mail-mysql-srv
spec:
  type: ClusterIP
  selector:
    app: mail-mysql
  ports:
    - name: db
      protocol: TCP
      port: 3306
      targetPort: 3306
