infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx  
  rules:
    - host: badal.org
      http:
        paths:
          - path: /api/users(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/users(/|$)(.*)
            pathType: ImplementationSpecific 
            backend: 
              service: 
                name: ticket-srv 
                port: 
                  number: 3000
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service: 
                name: client-srv
                port:
                  number: 3000
